css/style.css
/* theme colors
dark: #222222;
*/

@font-face {
   font-family: 'Romana';
   src: url(../assets/fonts/Romana-BT-Roman.woff2) format('woff2'),
        url(../assets/fonts/Romana-BT-Roman.woff) format('woff');
}
@font-face {
   font-family: 'VulfMono-LightItalic';
   src: url(/assets/fonts/VulfMono-LightItalic.woff2) format('woff2'),
        url(/assets/fonts/VulfMono-LightItalic.woff) format('woff');
}
@font-face {
   font-family: 'VulfSans-Bold';
   src: url(/assets/fonts/VulfSans-Bold.woff2) format('woff2'),
        url(/assets/fonts/VulfSans-Bold.woff) format('woff');
}
@font-face {
   font-family: 'VulfMono-Regular';
   src: url(/assets/fonts/VulfMono-Regular.woff2) format('woff2'),
        url(/assets/fonts/VulfMono-Regular.woff) format('woff');
}
@font-face {
   font-family: 'VulfMono-Black';
   src: url(/assets/fonts/VulfMono-Black.woff2) format('woff2'),
        url(/assets/fonts/VulfMono-Black.woff) format('woff');
}
@font-face {
  font-family: 'Cheee';
  src:  url('/assets/fonts/Cheee-Wowie.woff2') format('woff2'),
        url('/assets/fonts/Cheee-Wowie.woff') format('woff');
}

/*global styles*/

body {
  font-family: "VulfMono-LightItalic", sans-serif;
  color: #000000;
  color: #e6edf3;
  background-color: #010309;
  background-image: linear-gradient(
  45deg,
  hsl(213deg 26% 7%) 0%,
  hsl(213deg 42% 7%) 30%,
  hsl(214deg 59% 7%) 51%,
  hsl(215deg 73% 7%) 65%,
  hsl(217deg 85% 7%) 74%,
  hsl(219deg 94% 7%) 82%,
  hsl(222deg 100% 7%) 87%,
  hsl(226deg 100% 7%) 92%,
  hsl(229deg 100% 8%) 96%,
  hsl(233deg 100% 8%) 100%
);
  background-position: 0px 0px, 0px 0px;
  background-size: 100%, auto;
  background-repeat: no-repeat, repeat;
  background-attachment: scroll, scroll;
  font-size: 12px;
}
section a {
  color: #1eed88;
}
h1,h2,h3,h4,h5,h6 {
  color: #222222;
  font-weight: 700;
  font-family: 'Romana', Domine, sans-serif;
  font-family: "VulfSans-Bold", Domine,sans-serif;
}
a {
  transition: .25s;
}
a:hover {
  color: #2f81f7;
}
.smoke-container {
  position: relative;
  height: 80px;
  width: 80px;
  top: 3vw; /* change these values to vw units */
  left: 3.5vw;
}
.puff {
  position: absolute;
  bottom: 0;
  left: calc(50% + 10px);
  background: rgba(105, 105, 105, 0.5);
  opacity: 0;
  transform: scale(0);
}
.puff:nth-child(1) {
  width: 15px;
  height: 15px;
  animation: animateSmoke 4s ease-in-out infinite; 
  animation-delay: 1s; /* Delay added */
  transform-origin: 50% 50%;
  border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
}
.puff:nth-child(2) {
  width: 10px;
  height: 10px;
  animation: animateSmoke 2.8s ease-in-out infinite; 
  animation-delay: 2.5s;
  transform-origin: 60% 40%;
  border-radius: 60% 40% 40% 60%/60% 60% 40% 40%;
}
.puff:nth-child(3) {
  width: 10px;
  height: 10px;
  animation: animateSmoke 3.5s ease-in-out infinite;
  animation-delay: 4s;
  transform-origin: 40% 60%;
  border-radius: 40% 60% 60% 40%/40% 40% 60% 60%;
}
.whirl {
  position: absolute;
  bottom: 0px;
  left: calc(50% + 13px);
  width: 2px;
  height: 20px;
  background: rgba(105, 105, 105, 0.5);
  opacity: 0;
  transform: scale(0);
  border-radius: 50%;
}
.whirl:nth-child(4) {
  animation: animateSmoke 5s ease-in-out infinite, whirlAway 5s ease-in-out infinite;
  animation-delay: 7s;
  transform-origin: bottom;
}
.whirl:nth-child(5) {
  animation: animateSmoke 5s ease-in-out infinite, whirlAway 5.5s ease-in-out infinite;
  animation-delay: 10s;
  transform-origin: bottom;
}
@keyframes animateSmoke {
  0% { opacity: 0; transform: scale(0); }
  30% { opacity: .9; }
  100% { opacity: 0; transform: scale(2); bottom: 80%; }
}
@keyframes whirlAway {
  0% { opacity: 0; transform: translateY(0) translateX(0) rotate(0deg); }
  10% { opacity: .9; transform: translateY(-1px) translateX(1px) rotate(-10deg); }
  20% { opacity: .5; transform: translateY(-2px) translateX(2px) rotate(-20deg); }
  30% { opacity: .3; transform: translateY(-3px) translateX(3px) rotate(-30deg); }
  40% { opacity: .3; transform: translateY(-4px) translateX(4px) rotate(-40deg); }
  50% { opacity: .2; transform: translateY(-5px) translateX(5px) rotate(-50deg); }
  60% { opacity: .2; transform: translateY(-6px) translateX(6px) rotate(-40deg); }
  70% { opacity: .1; transform: translateY(-7px) translateX(7px) rotate(-30deg); }
  80% { opacity: .1; transform: translateY(-8px) translateX(8px) rotate(-20deg); }
  90% { opacity: 0.1; transform: translateY(-9px) translateX(9px) rotate(-10deg); }
  100% { opacity: 0; transform: translateY(-10px) translateX(10px) rotate(0deg); }
}

.project-title a, h3 {
  margin-top: 0px;
  font-family: 'Domine', sans-serif;
  font-family: "VulfMono-Regular", sans-serif; 
  font-family: "VulfSans-Bold", Domine,sans-serif;
  letter-spacing: .25px;
  margin-bottom: 0px;
  font-weight: 700;
  padding-bottom: 10px;
  font-size: 26px !important;
  line-height: 48px;
}
.border {
  border:  1px solid #30363D;
}
.border-b {
  border-color: #30363D !important;
}
.border-none {
	border: none !important;
}

/*homepage */
.hero {
  padding-left: 10px;
  padding-right: 10px;
  margin-top: 125px;
  margin-bottom: 53px;
}
.hero em {
  border-bottom: #2f81f7 solid 0.2rem;
  font-style: normal;
}
.hero i {
  opacity: .6;
  font-size: 12px;
}
.hero img {
  width: 155px;
  height: 155px;
  border-radius: 3px;
  float: right;
  border: 1px solid #30363D;
  top: 0;
}
.hero .twitter {
  padding: 0rem 0.6rem;
  color: #2f81f7;
  text-transform: uppercase;
  letter-spacing: .2px;
  background: rgba(40, 40, 40, 0.15);
  border-radius: 3px;
  -webkit-transition: all 0.3s ease;
  font-family: "VulfSans-Bold", Domine,sans-serif;
  font-family: "VulfMono-Regular", sans-serif;
  border: 1px solid #30363D;
  font-weight: 400;
  transition: all 0.3s ease;
}
.hero .twitter:hover, .twitter:visited {
  -webkit-transition: all 0.3s ease;
  color: #2f81f7;
  background: #202733;
  border: 1px solid #30363D;
  transition: all 0.3s ease;
  text-decoration: none;
}
.hero a { 
font-style: italic;
border-bottom: 1px dotted #2f81f7;
}
.move {
  margin-left: 3px;
}
.hero h1 {
  font-size: 55px;
  color: #161813;
  color: #e6edf3;
  letter-spacing: 1px;
  line-height: 1.3;
  margin-bottom: 39px;
}
.hero p {
  color: #161813;
  color: #d5e1eb;
  margin-top: 20px;
  line-height: 28px;
  font-size: 16px;
}
.twitter {
  padding: 2px 4px 1px 4px !important;
  vertical-align: middle;
}
.home-project-title {
  color: #222;
  color: #8b929c;
  font-size: 48px;
  line-height: 56px;
  border-right: 1px dotted #30363D;
  border-bottom: 1px dotted #30363D;
  margin-right: 40px;
    
}
.description {
  color: #d5e1eb;
}
.home-preview-description {
  max-width: 410px;
  margin-top: 15px;
}
#current-projects img {
  border: 1px solid #30363D;
}
#current-projects .home-teaser-list {
  border-top: 1px dotted #30363D;
  padding-top: 70px;
}
#current-projects .hero-image-home-link-block {
  max-width: 450px;
  margin-left: 40px;
}
#current-projects p {
  margin-top: 25px;
  line-height: 23px;
  font-size: 14px !important;
}
#automatons, #drips {
  border-radius: 2px;
  opacity: 1;
}
.swiper-container {
  background: #21262D;
  max-width: 453px;
  overflow: hidden;
}
#project-2nd .home-teaser-list {
  margin-top: 30px;
  border-top: none;
  border-bottom: 1px dotted #30363D;
  padding-bottom: 95px;
}
#project-2nd img {
  border-radius: 2px;
}
footer {
  margin-top: 150px;
  margin-bottom: 40px;
}
footer a {
  color: #2f81f7;
}
footer a:hover {
  border-color: #2f81f7;
}
footer h3 {
  color: #8b929c;
}
.name h1 {
  max-width: 300px !important;
}
.intro img {
  float: right !important;
  margin-right: 10px;
}

/*responsive design*/
.intro h1, .intro img {
  float: left;
}
footer a {
  border-bottom: 1px dotted #30363D;
  margin-left: 12px;
}
@media (max-width: 768px) {
  .hero {
    margin-top: 80px;
  }
  .hero h1 {
    font-size: 39px;
  }
  .hero img {
    width: 108px;
    height: 108px;
  }
  #project-2nd .swiper-container {
    background: #95E9EF;
    background: #21262D;
 }
 #current-projects .home-teaser-list {
  padding-top: 0px;
 }
 .home-project-title {
  margin-right: 0;
  margin-top: 40px;
 }
 #current-projects .hero-image-home-link-block {
  margin-left: 0;
 }
 #current-projects .hero-image-home-link-block {
  margin-top: 30px;
 }
 footer {
  margin-top: 70px;
  margin-bottom: 20px;
 }
 .mt-10-sm {
  margin-top: 50px;
 }
 .hero p {
  font-size: 15px;
}
.twitter {
  color: #2f81f7;
}
.smoke-container {
  top: 15px;
  left: 40px;
}
.whirl {
  left: calc(50% + 18px);
}
}

@media (max-width: 575px) {
  .smoke-container {
    top: 7vw;
    left: 5.25vw;
    width: 10px;
    height: 10px;
  }
}

@media (max-width: 575px) {
  .smoke-container {
    top: 13vw;
    left: .5vw;
    width: 10px;
    height: 10px;
  }
}

@media (max-width: 400px) {
  .smoke-container {
    top: 18vw;
    left: 1vw;
    width: 10px;
    height: 10px;
  }
}

@media (min-width: 768px) {
  #current-projects p {
  margin-top: 25px;
  line-height: 23px;
  font-size: 14px;
  max-width: 425px;
 }
}

